fixing about section tablet

--- a/css/style.css
+++ b/css/style.css
@@ -1287,7 +1287,8 @@ body {
   margin-top: -50vh; }
   @media only screen and (max-width: 56.25em) {
     .section-about {
-      padding: 10rem 0; } }
+      padding: 20rem 0;
+      margin-top: -55vh; } }
 
 .section-media {
   background-color: #f7f7f7;
