--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -3,7 +3,8 @@
   padding: 20rem 0 20rem 0
   margin-top: -50vh
   @include respond(tab-port)
-    padding: 10rem 0
+    padding: 20rem 0
+    margin-top: -55vh
 
 .section-media
   background-color: $color-grey-light-1
